Add custom property and fonts

--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,9 @@
+/* CUSTOM_PROPERTY */
+:root{
+  --primary-color: #ea625c;
+  --text-color: #333;
+}
+
 html{
   height: 100%;
   box-sizing: border-box;
@@ -16,7 +22,7 @@ body{
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family: "Arial", sans-serif;
+  font-family: "Roboto","Arial", sans-serif;
   font-size: 16px;
   line-height: 1.5;
   background-color: #fff;
