--- a/style/style.css
+++ b/style/style.css
@@ -33,6 +33,10 @@ img{
   max-width: 100%;
   height: auto;
 }
+*:focus{
+  outline: 2px dashed var(--primary-color);
+  outline-offset: 2px;
+}
 
 .container{
   width: 100%;
