--- a/style/style.css
+++ b/style/style.css
@@ -172,6 +172,73 @@ img{
   color: #777;
 }
 
+
+/* FEATURES */
+.features {
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+.features-container {
+}
+
+.features-list {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.features-item {
+  width: 280px;
+}
+.features-item:not(:last-child){
+  margin-right: 80px;
+}
+.features-heading {
+  font-size: 18px;
+  line-height: 1.5;
+  margin-top: 0;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+  color: #222;
+}
+.features-text {
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-size: 15px;
+  line-height: 1.6;
+  color: var(--text-color);
+}
+
+.features-divider {
+  width: 8px;
+  height: 8px;
+  border: 0;
+  background-color: #ddd;
+  margin: 0;
+  box-shadow: 16px 0 0 #ddd,32px 0 0 #ddd;
+}
+.learn-more-link {
+  display: inline-flex;
+  align-items: center;
+  font-size: 16px;
+  line-height: 1.6;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: var(--primary-color);
+}
+.learn-more-link::before{
+  content: "";
+  width: 40px;
+  height: 3px;
+  background-color: var(--primary-color);
+  margin-right: 10px;
+  transition: width 0.3s ease;
+}
+
+.learn-more-link:hover::before{
+  width: 60px;
+}
 /* RETINA-BACKFGROUND-IMAGE */
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
